# poorhouse-lane-v3

./: .gitignore  CONTRIBUTING.md  FEATURE_RESTORATION_PLAN.md  GPIO_WIRING_GUIDE.md  HARDWARE.md  LICENSE  MINIMAL_BUILD.md  PCM5102_TROUBLESHOOTING.md  PR_DESCRIPTION.md  QUICKSTART.md  README.md  audio_diagnostics.sh  disable_appliance_mode.sh  disable_onboard_audio.sh  enable_appliance_mode.sh  gpio_cleanup.sh  index.html  jest.config.js  package.json  setup.sh
cpp/: CMakeLists.txt  README.md  build.sh  install.sh  setup.sh
cpp/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  dubsiren
cpp/include/: Common.h
cpp/include/Audio/: AudioEngine.h  AudioFilePlayer.h  AudioOutput.h
cpp/include/DSP/: Delay.h  Envelope.h  Filter.h  LFO.h  Oscillator.h  Reverb.h
cpp/include/Hardware/: GPIOController.h  LEDController.h
cpp/src/: main.cpp
cpp/src/Audio/: AudioEngine.cpp  AudioFilePlayer.cpp  AudioOutput.cpp
cpp/src/DSP/: Delay.cpp  Envelope.cpp  Filter.cpp  LFO.cpp  Oscillator.cpp  Reverb.cpp
cpp/src/Hardware/: GPIOController.cpp  LEDController.cpp
mp3s/: README.md  test-tone.sh
tests/: README.md  dubsiren.test.js  integration.test.js  setup.js
